update google analyticvs

--- a/hugo.toml
+++ b/hugo.toml
@@ -5,3 +5,4 @@ theme = 'hugo-geekblog'
 sectionPagesMenu = 'main'
 pygmentsUseClasses = true
 pygmentsCodeFences = true
+googleAnalytics = "G-RHTJKJXTF6"
