--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 #unwanted blog posts
-/content/blog/2025/configure-netapp-ontap-nfs-with-proxmox-ve
+/content/blog/2025/configure-netapp-ontap-nfs-with-proxmox-ve/
+/public/
